# earnings-edge

./: .claudeignore  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: security-reviewer.md  test-writer.md
.claude/commands/: eval.md  new-agent.md  review-pr.md
.claude/skills/prompt-linter/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/instructions/: evals.instructions.md  prompts.instructions.md  python.instructions.md
.github/prompts/: add-skill.prompt.md  add-tool.prompt.md  new-agent.prompt.md
.github/workflows/: ci.yml  eval.yml  prompt-diff.yml  release.yml
docs/: architecture.md  migration-plan.md
docs/adr/: 0001-langgraph-for-orchestration.md  0002-skills-vs-tools-boundary.md  0003-eval-gate-in-ci.md  0004-consolidate-eval-gate-into-ci.md  0005-long-term-memory-via-langgraph-store.md  0006-durable-store-by-default.md  0007-rag-not-required.md  0008-skills-are-design-docs-tools-come-from-composio.md  0009-model-registry-is-the-llm-seam.md  0010-observability-traced-and-otel.md  0011-mcp-deferred.md
docs/runbooks/: agent-stuck-in-loop.md  rollback-a-prompt.md
evals/: README.md  run.py
evals/datasets/: end_to_end.jsonl  researcher_qa.jsonl
evals/scorers/: llm_judge.py  trajectory.py
evals/suites/: regression.yaml
examples/: AAPL-Q1-FY2025-brief.md
prompts/: registry.yaml
prompts/analyst/: v1.md
prompts/coder/: v1.md
prompts/critic/: v1.md
prompts/delivery/: v1.md
prompts/evaluation/: v1.md
prompts/ingestion/: v1.md
prompts/kpi/: v1.md
prompts/researcher/: v1.md
prompts/sentiment/: v1.md
prompts/shared/: output_formats.md  safety.md  tool_use_policy.md
prompts/supervisor/: v1.md
prompts/synthesis/: v1.md
scripts/: check_anthropic_key.py  check_composio_key.py  check_eval_regression.py  replay_trace.py  seed_vectorstore.py
skills/: README.md
skills/analyst-brief-generation/: SKILL.md
skills/api_integration/: SKILL.md
skills/code_execution/: SKILL.md
skills/composio-delivery/: SKILL.md
skills/consensus-estimate-retrieval/: SKILL.md
skills/earnings-surprise-detection/: SKILL.md
skills/file_io/: SKILL.md
skills/finbert-tone-analysis/: SKILL.md
skills/grounding-faithfulness-eval/: SKILL.md
skills/guidance-raise-detection/: SKILL.md
skills/hedging-certainty-features/: SKILL.md
skills/kpi-extraction/: SKILL.md
skills/memory_management/: SKILL.md
skills/sec-edgar-8k-retrieval/: SKILL.md
skills/sentiment-surprise/: SKILL.md
skills/signal-synthesis-scoring/: SKILL.md
skills/transcript-ingestion-segmentation/: SKILL.md
skills/web_research/: SKILL.md
src/agentic_app/: __init__.py  main.py
src/agentic_app/agents/: __init__.py  base.py  delivery_agent.py  evaluation_agent.py  ingestion_agent.py  kpi_agent.py  sentiment_agent.py  synthesis_agent.py
src/agentic_app/api/: app.py
src/agentic_app/config/: logging.py  models.py  settings.py
src/agentic_app/llm/: anthropic_client.py
src/agentic_app/mcp/: __init__.py
src/agentic_app/memory/: __init__.py
src/agentic_app/observability/: __init__.py
src/agentic_app/orchestration/: __init__.py  graph.py  state.py
src/agentic_app/prompts/: loader.py
src/agentic_app/rag/: __init__.py
src/agentic_app/tools/: registry.py  schemas.py
tests/: README.md  conftest.py
tests/fixtures/: README.md
tests/integration/: test_example.py  test_trajectory.py
tests/unit/: test_prompt_loader.py  test_prompt_registry.py
tests/unit/test_agents/: test_evaluation_agent.py  test_ingestion_agent.py  test_kpi_agent.py  (+2 more)
(+1 files in other folders)
